finished formatting task 3, and assignemnt 6

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 6/LaTex/Aufgabe_3.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 6/LaTex/Aufgabe_3.tex
@@ -182,13 +182,157 @@ Index & Wert \\
 \end{itemize}
 \end{multicols}
 
+
 \noindent
 \textbf{Teilaufgabe 2: Hashtabelle der Größe 6}
-\begin{verbatim}
-Index 0: [12]
-Index 1: [19]
-Index 2: [20]
-Index 3: [15,33]
-Index 4: [28,10]
-Index 5: [5,17]
-\end{verbatim}
+
+\begin{multicols}{2}
+\begin{itemize}
+\item Schlüssel 5\\
+Hashfunktion: $h(5) = 5 \mod 6=5$
+
+\begin{center}
+\begin{tabular}{c|c}
+Index & Wert \\
+\hline
+0 & \\
+1 & \\
+2 & \\
+3 & \\
+4 & \\
+5 & 5\\
+
+\end{tabular}
+\end{center}
+
+\item Schlüssel 28\\
+Hashfunktion: $h(28) = 28 \mod 6 = 4$
+
+\begin{center}
+\begin{tabular}{c|c}
+Index & Wert \\
+\hline
+0 & \\
+1 & \\
+2 & \\
+3 & \\
+4 & 28\\
+5 & 5\\
+
+\end{tabular}
+\end{center}
+
+\item Schlüssel 19\\
+Hashfunktion: $h(19) = 19 \mod 6 = 1$
+
+\begin{center}
+\begin{tabular}{c|c}
+Index & Wert \\
+\hline
+0 & \\
+1 & 19\\
+2 & \\
+3 & \\
+4 & 28\\
+5 & 5\\
+\end{tabular}
+\end{center}
+
+\item Schlüssel 15\\
+Hashfunktion: $h(15) = 15 \mod 6 = 3$
+
+\begin{center}
+\begin{tabular}{c|c}
+Index & Wert \\
+\hline
+0 & \\
+1 & 19\\
+2 & \\
+3 & 15\\
+4 & 28\\
+5 & 5\\
+\end{tabular}
+\end{center}
+
+\item Schlüssel 20\\
+Hashfunktion: $h(20) = 20 \mod 6 = 2$
+
+\begin{center}
+\begin{tabular}{c|c}
+Index & Wert \\
+\hline
+0 & \\
+1 & 19\\
+2 & 20\\
+3 & 15\\
+4 & 28\\
+5 & 5\\
+\end{tabular}
+\end{center}
+
+\item Schlüssel 33\\
+Hashfunktion: $h(33) = 33 \mod 6 = 3$
+
+\begin{center}
+\begin{tabular}{c|c}
+Index & Wert \\
+\hline
+0 & \\
+1 & 19\\
+2 & 20\\
+3 & [15,33]\\
+4 & 28\\
+5 & 5\\
+\end{tabular}
+\end{center}
+
+\item Schlüssel 12\\
+Hashfunktion: $h(12) = 12 \mod 6 = 0$
+
+\begin{center}
+\begin{tabular}{c|c}
+Index & Wert \\
+\hline
+0 & 12\\
+1 & 19\\
+2 & 20\\
+3 & [15,33]\\
+4 & 28\\
+5 & 5\\
+\end{tabular}
+\end{center}
+
+\item Schlüssel 17\\
+Hashfunktion: $h(17) = 17 \mod 6 = 5$
+
+\begin{center}
+\begin{tabular}{c|c}
+Index & Wert \\
+\hline
+0 & 12\\
+1 & 19\\
+2 & 20\\
+3 & [15,33]\\
+4 & 28\\
+5 & [5,17]\\
+\end{tabular}
+\end{center}
+
+\columnbreak
+\item Schlüssel 10\\
+Hashfunktion: $h(10) = 10 \mod 6 = 4$
+
+\begin{center}
+\begin{tabular}{c|c}
+Index & Wert \\
+\hline
+0 & 12\\
+1 & 19\\
+2 & 20\\
+3 & [15,33]\\
+4 & [28,10]\\
+5 & [5,17]\\
+\end{tabular}
+\end{center}
+\end{itemize}
+\end{multicols}
