--- a/Semester_2/Algorithmen und Datenstrukturen/Assignments 7/LaTex/Aufgabe_1.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignments 7/LaTex/Aufgabe_1.tex
@@ -3,6 +3,136 @@
 \noindent
 \textbf{a)} Fügen Sie nacheinander die Schlüssel 10, 22, 31, 4, 15, 28, 17, 88, 59 in eine Hashtabelle der Größe 11 ein. Die Hashfunktion sei $h(k) = k \mod 11$. Die Konflikte werden durch offene Adressierung mit linearem Sondieren gelöst.\\
 
+
+
+\noindent
+\textbf{Lösung:}\\ "  " : Empty, * : Deleted\\
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+Index & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
+\hline
+T = & & & & & & & & & & & \\
+\hline
+\end{tabular}
+\end{center}
+
+\begin{enumerate}
+\item insert (10,v)
+
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+Index & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
+\hline
+T = & & & & & & & & & & & 10\\
+\hline
+\end{tabular}
+\end{center}
+
+\item insert (22,v)
+
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+Index & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
+\hline
+T = & 22 & & & & & & & & & & 10\\
+\hline
+\end{tabular}
+\end{center}
+
+\item insert (31,v)
+
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+Index & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
+\hline
+T = & 22 & & & & & & & & & 31 & 10\\
+\hline
+\end{tabular}
+\end{center}
+
+\item insert (4,v)
+
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+Index & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
+\hline
+T = & 22 & & & & 4 & & & & & 31 & 10\\
+\hline
+\end{tabular}
+\end{center}
+
+\item insert (15,v)
+
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+Index & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
+\hline
+T = & 22 & & & & 4 & 15 & & & & 31 & 10\\
+\hline
+\end{tabular}
+\end{center}
+$\Rightarrow$ index 4: 4 $\neq$ 15 $\Rightarrow$ Index 5: Empty $\rightarrow$ Index 5 = 15
+
+\item insert (28,v)
+
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+Index & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
+\hline
+T = & 22 & & & & 4 & 15 & 28 & & & 31 & 10\\
+\hline
+\end{tabular}
+\end{center}
+
+\item insert (17,v)
+
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+Index & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
+\hline
+T = & 22 & & & & 4 & 15 & 28 & 17 & & 31 & 10\\
+\hline
+\end{tabular}
+\end{center}
+$\Rightarrow$ Index 6: 28 $\neq$ 17 $\rightarrow$ Index 7: Empty $\rightarrow$ Index 7 = 17
+
+\item insert (88,v)
+
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+Index & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
+\hline
+T = & 22 & 88 & & & 4 & 15 & 28 & 17 & & 31 & 10\\
+\hline
+\end{tabular}
+\end{center}
+$\Rightarrow$ Index 0: 22 $\neq$ 88 $\rightarrow$ Index 1: Empty $\rightarrow$ Index 1 = 88
+
+\item insert (59,v)
+
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+Index & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
+\hline
+T = & 22 & 88 & & & 4 & 15 & 28 & 17 & 59 & 31 & 10\\
+\hline
+\end{tabular}
+\end{center}
+$\Rightarrow$ Index 4: 4 $\neq$ 59 $\rightarrow$ Index 8: Empty $\rightarrow$ Index 8 = 59
+
+
+\end{enumerate}
+
 \noindent
 \textbf{b)} Fügen Sie nacheinander die Schlüssel 10, 22, 31, 4, 15, 29, 17, 88, 59 in eine Hashtabelle der Größe 11 ein. Die Konflikte werden durch Kuckuck gelöst, mit $h1(k) = k \mod 11$ und $h2(k) = (k \mod 13) \mod 11$.\\
 
